--- a/src/pages/timeline/timeline.less
+++ b/src/pages/timeline/timeline.less
@@ -1,7 +1,18 @@
-.timeline {
+.back-page {
+  height: 100vh;
 
-  .close-btn {
+  .timeline {
+    position: relative;
+    left: 10%;
+    width: 80%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
 
-    top: 0px
+    .close-btn {
+      margin: 10px;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+    }
   }
 }
