--- a/src/pages/timeline/timeline.less
+++ b/src/pages/timeline/timeline.less
@@ -1,11 +1,8 @@
 .back-page {
-  height: 100vh;
-
   .timeline {
     position: relative;
     left: 10%;
     width: 80%;
-    height: 100%;
     background-color: rgba(0, 0, 0, .2);
 
     .close-btn {
@@ -15,4 +12,8 @@
       right: 0px;
     }
   }
+}
+
+.gwozjv.show-less {
+  max-height: fit-content !important;
 }
