--- a/src/pages/welcome/welcome.less
+++ b/src/pages/welcome/welcome.less
@@ -1,5 +1,5 @@
 .hPocVY {
-  background-image: url("https://arinsider.co/wp-content/uploads/2017/10/houzz-app-1.jpg");
+  background-image: url("./houzz-app-1.webp");
   background-repeat: no-repeat;
   background-size: cover;
 }
