--- a/src/pages/welcome/welcome.less
+++ b/src/pages/welcome/welcome.less
@@ -1,7 +1,5 @@
 .hPocVY {
-  background-image: url("https://www.livehome3d.com/assets/img/articles/ar-in-home-design/ipad-with-kitchen-in-ar-in-live-home-3d@2x.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: white;
 }
 
 .sub-header {
