--- a/src/pages/welcome/welcome.less
+++ b/src/pages/welcome/welcome.less
@@ -1,5 +1,7 @@
 .hPocVY {
-  background: white;
+  background-image: url("https://www.livehome3d.com/assets/img/articles/ar-in-home-design/ipad-with-kitchen-in-ar-in-live-home-3d@2x.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .sub-header {
