--- a/src/pages/timeline/timeline.less
+++ b/src/pages/timeline/timeline.less
@@ -3,7 +3,7 @@
     position: relative;
     left: 10%;
     width: 80%;
-    background-color: gray;
+    background-color: rgba(0, 0, 0, .2);
 
     .close-btn {
       margin: 10px;
